app/globals.css
@import "tailwindcss";

:root {
    --background: oklch(0.985 0.001 106.423);
    --foreground: oklch(0.147 0.004 49.25);
    --card: oklch(0.99 0.001 106.423);
    --card-foreground: oklch(0.147 0.004 49.25);
    --popover: oklch(0.99 0.001 106.423);
    --popover-foreground: oklch(0.147 0.004 49.25);
    --primary: oklch(0.216 0.006 56.043);
    --primary-foreground: oklch(0.985 0.001 106.423);
    --secondary: oklch(0.923 0.003 48.717);
    --secondary-foreground: oklch(0.268 0.007 34.298);
    --muted: oklch(0.955 0.002 56);
    --muted-foreground: oklch(0.353 0.013 58.071);
    --accent: oklch(0.374 0.01 67.558);
    --accent-foreground: oklch(0.985 0.001 106.423);
    --destructive: oklch(0.577 0.245 27.325);
    --destructive-foreground: oklch(0.985 0.001 106.423);
    --border: oklch(0.869 0.005 56.366);
    --input: oklch(0.955 0.002 56);
    --border-color: oklch(0.709 0.01 56.259);
    --ring: oklch(0.444 0.011 73.639);
    --chart-1: oklch(0.216 0.006 56.043);
    --chart-2: oklch(0.374 0.01 67.558);
    --chart-3: oklch(0.553 0.013 58.071);
    --chart-4: oklch(0.709 0.01 56.259);
    --chart-5: oklch(0.869 0.005 56.366);
    --sidebar: oklch(0.97 0.001 106.424);
    --sidebar-foreground: oklch(0.216 0.006 56.043);
    --sidebar-primary: oklch(0.216 0.006 56.043);
    --sidebar-primary-foreground: oklch(0.985 0.001 106.423);
    --sidebar-accent: oklch(0.923 0.003 48.717);
    --sidebar-accent-foreground: oklch(0.268 0.007 34.298);
    --sidebar-border: oklch(0.869 0.005 56.366);
    --sidebar-ring: oklch(0.444 0.011 73.639);
    --radius: 0.625rem;
    --shadow-x: 0px;
    --shadow-y: 1px;
    --shadow-blur: 0px;
    --shadow-spread: 0px;
    --shadow-opacity: 0.08;
    --shadow-color: hsl(30 8% 12%);
    --shadow-2xs: 0px 1px 1px 0px hsl(30 8% 12% / 0.04);
    --shadow-xs: 0px 1px 2px 0px hsl(30 8% 12% / 0.06);
    --shadow-sm:
        0px 1px 2px 0px hsl(30 8% 12% / 0.06),
        0px 6px 16px -12px hsl(30 8% 12% / 0.1);
    --shadow:
        0px 1px 3px 0px hsl(30 8% 12% / 0.07),
        0px 10px 28px -18px hsl(30 8% 12% / 0.14);
    --shadow-md:
        0px 2px 6px 0px hsl(30 8% 12% / 0.08),
        0px 18px 38px -24px hsl(30 8% 12% / 0.16);
    --shadow-lg:
        0px 4px 10px 0px hsl(30 8% 12% / 0.08),
        0px 26px 54px -30px hsl(30 8% 12% / 0.18);
    --shadow-xl:
        0px 8px 16px 0px hsl(30 8% 12% / 0.1),
        0px 34px 72px -36px hsl(30 8% 12% / 0.22);
    --shadow-2xl: 0px 40px 90px -42px hsl(30 8% 12% / 0.26);
    --tracking-normal: 0em;
    --spacing: 0.25rem;
    --badge-inner-shadow: oklch(0.395 0.07 55 / 0.25);
    --github-0: #ebedf0;
    --github-1: #9be9a8;
    --github-2: #40c463;
    --github-3: #30a14e;
    --github-4: #216e39;
}

.dark {
    --background: oklch(0.1408 0.0044 285.82);
    --foreground: oklch(0.97 0.001 106.424);
    --card: oklch(0.18 0.005 56.043);
    --card-foreground: oklch(0.97 0.001 106.424);
    --popover: oklch(0.2 0.005 56.043);
    --popover-foreground: oklch(0.97 0.001 106.424);
    --primary: oklch(0.923 0.003 48.717);
    --primary-foreground: oklch(0.216 0.006 56.043);
    --secondary: oklch(0.268 0.007 34.298);
    --secondary-foreground: oklch(0.923 0.003 48.717);
    --muted: oklch(0.2739 0.0055 286.03);
    --muted-foreground: oklch(0.809 0.01 56.259);
    --accent: oklch(0.869 0.005 56.366);
    --accent-foreground: oklch(0.216 0.006 56.043);
    --destructive: oklch(0.704 0.191 22.216);
    --destructive-foreground: oklch(0.985 0.001 106.423);
    --border-color: oklch(0.44 0.008 56);
    --border: oklch(0.3 0.007 56);
    --input: oklch(0.216 0.006 56.043);
    --ring: oklch(0.709 0.01 56.259);
    --chart-1: oklch(0.923 0.003 48.717);
    --chart-2: oklch(0.869 0.005 56.366);
    --chart-3: oklch(0.709 0.01 56.259);
    --chart-4: oklch(0.553 0.013 58.071);
    --chart-5: oklch(0.374 0.01 67.558);
    --sidebar: oklch(0.147 0.004 49.25);
    --sidebar-foreground: oklch(0.923 0.003 48.717);
    --sidebar-primary: oklch(0.923 0.003 48.717);
    --sidebar-primary-foreground: oklch(0.216 0.006 56.043);
    --sidebar-accent: oklch(0.268 0.007 34.298);
    --sidebar-accent-foreground: oklch(0.923 0.003 48.717);
    --sidebar-border: oklch(0.3 0.007 56);
    --sidebar-ring: oklch(0.709 0.01 56.259);
    --radius: 0.625rem;
    --shadow-x: 0px;
    --shadow-y: 1px;
    --shadow-blur: 0px;
    --shadow-spread: 0px;
    --shadow-opacity: 0.26;
    --shadow-color: hsl(30 10% 4%);
    --shadow-2xs: 0px 1px 1px 0px hsl(30 10% 4% / 0.18);
    --shadow-xs: 0px 1px 2px 0px hsl(30 10% 4% / 0.22);
    --shadow-sm:
        0px 1px 2px 0px hsl(30 10% 4% / 0.22),
        0px 6px 16px -12px hsl(30 10% 4% / 0.34);
    --shadow:
        0px 1px 3px 0px hsl(30 10% 4% / 0.24),
        0px 10px 28px -18px hsl(30 10% 4% / 0.42);
    --shadow-md:
        0px 2px 6px 0px hsl(30 10% 4% / 0.26),
        0px 18px 38px -24px hsl(30 10% 4% / 0.46);
    --shadow-lg:
        0px 4px 10px 0px hsl(30 10% 4% / 0.28),
        0px 26px 54px -30px hsl(30 10% 4% / 0.52);
    --shadow-xl:
        0px 8px 16px 0px hsl(30 10% 4% / 0.3),
        0px 34px 72px -36px hsl(30 10% 4% / 0.58);
    --shadow-2xl: 0px 40px 90px -42px hsl(30 10% 4% / 0.66);
    --badge-inner-shadow: oklch(0.95 0.04 50 / 0.25);
    --github-0: #161b22;
    --github-1: #0e4429;
    --github-2: #006d32;
    --github-3: #26a641;
    --github-4: #39d353;
}

@theme inline {
    --color-background: var(--background);
    --color-foreground: var(--foreground);
    --color-card: var(--card);
    --color-card-foreground: var(--card-foreground);
    --color-popover: var(--popover);
    --color-popover-foreground: var(--popover-foreground);
    --color-primary: var(--primary);
    --color-primary-foreground: var(--primary-foreground);
    --color-secondary: var(--secondary);
    --color-secondary-foreground: var(--secondary-foreground);
    --color-muted: var(--muted);
    --color-muted-foreground: var(--muted-foreground);
    --color-accent: var(--accent);
    --color-accent-foreground: var(--accent-foreground);
    --color-destructive: var(--destructive);
    --color-destructive-foreground: var(--destructive-foreground);
    --color-border: var(--border);
    --color-input: var(--input);
    --color-ring: var(--ring);
    --color-chart-1: var(--chart-1);
    --color-chart-2: var(--chart-2);
    --color-chart-3: var(--chart-3);
    --color-chart-4: var(--chart-4);
    --color-chart-5: var(--chart-5);
    --color-sidebar: var(--sidebar);
    --color-sidebar-foreground: var(--sidebar-foreground);
    --color-sidebar-primary: var(--sidebar-primary);
    --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
    --color-sidebar-accent: var(--sidebar-accent);
    --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
    --color-sidebar-border: var(--sidebar-border);
    --color-sidebar-ring: var(--sidebar-ring);
    --color-border-color: var(--border-color);
    --font-sans: var(--font-ibm-sans);
    --font-mono: var(--font-ibm-mono);
    --radius: var(--radius);
    --radius-sm: calc(var(--radius) - 4px);
    --radius-md: calc(var(--radius) - 2px);
    --radius-lg: var(--radius);
    --radius-xl: calc(var(--radius) + 4px);

    --shadow-2xs: var(--shadow-2xs);
    --shadow-xs: var(--shadow-xs);
    --shadow-sm: var(--shadow-sm);
    --shadow: var(--shadow);
    --shadow-md: var(--shadow-md);
    --shadow-lg: var(--shadow-lg);
    --shadow-xl: var(--shadow-xl);
    --shadow-2xl: var(--shadow-2xl);

    --animate-marquee: marquee 40s linear infinite;
}

@keyframes marquee {
    0% {
        transform: translateX(0);
    }
    100% {
        transform: translateX(-50%);
    }
}
body {
    background: var(--background);
    color: var(--foreground);
}

::selection {
    background: #ffef00;
    color: oklch(0.216 0.006 56.043);
}

::view-transition-old(root),
::view-transition-new(root) {
    animation: none;
    mix-blend-mode: normal;
}

::view-transition-new(root) {
    z-index: 1;
}

@layer utilities {
    .no-scrollbar {
        -ms-overflow-style: none;
        scrollbar-width: none;
    }
    .no-scrollbar::-webkit-scrollbar {
        display: none;
    }

    .custom-dotted-underline {
        --dot-color: currentColor;
        --dot-size: 1px;
        --dot-gap: 5px;
        --underline-offset: 2px;
        text-decoration: none;
        background-image: radial-gradient(
            circle,
            var(--dot-color) var(--dot-size),
            transparent calc(var(--dot-size) + 0.1px)
        );
        background-position: 0 calc(100% - var(--underline-offset));
        background-size: calc(var(--dot-size) + var(--dot-gap)) 1px;
        background-repeat: repeat-x;
        padding-bottom: calc(var(--underline-offset) + 1px);
    }

    .dashed-border-y {
        background-image:
            repeating-linear-gradient(
                to bottom,
                var(--border-color) 0px,
                var(--border-color) 4px,
                transparent 4px,
                transparent 10px
            ),
            repeating-linear-gradient(
                to bottom,
                var(--border-color) 0px,
                var(--border-color) 4px,
                transparent 4px,
                transparent 10px
            );
        background-size:
            1px 100%,
            1px 100%;
        background-position:
            left top,
            right top;
        background-repeat: no-repeat;
    }

    .dashed-border-x {
        background-image:
            repeating-linear-gradient(
                to right,
                var(--border-color) 0px,
                var(--border-color) 4px,
                transparent 4px,
                transparent 10px
            ),
            repeating-linear-gradient(
                to right,
                var(--border-color) 0px,
                var(--border-color) 4px,
                transparent 4px,
                transparent 10px
            );
        background-size:
            100% 1px,
            100% 1px;
        background-position:
            top left,
            bottom left;
        background-repeat: no-repeat;
    }
}

